// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LedgerConnectionStep should emit event on connect 1`] = `
<div>
  <section
    class="space-y-8"
    data-testid="LedgerConnectionStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div>
        <h1
          class="mb-0 md:text-4xl"
          data-testid="header__title"
        >
          Opening of the app
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Information from your device is expected
        </div>
      </div>
    </div>
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
    >
      <label
        class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
        <div
          class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
          data-testid="FormLabel__required"
        />
      </label>
      <div>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="ImportWallet__network-menu"
          data-testid="SelectNetwork"
          role="combobox"
        >
          <label
            for="ImportWallet__network-input"
            id="ImportWallet__network-label"
          />
          <div
            class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
            data-testid="SelectNetworkInput"
          >
            <div
              class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonStartStyle-sc-1obbdqe-1 epSJiV gnQfLB px-4"
            >
              <div
                aria-label="ARK Devnet"
                class="Circle-uw7h4j-0 blBpcG border-theme-primary-100 text-theme-primary-400"
                data-testid="SelectNetworkInput__network"
              >
                <div
                  class="sc-bdfBwQ iyevwF"
                  data-testid="NetworkIcon__icon"
                  height="20"
                  width="20"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-controls="ImportWallet__network-menu"
              aria-labelledby="ImportWallet__network-label"
              autocomplete="off"
              class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures pl-15"
              data-testid="SelectNetworkInput__input"
              disabled=""
              id="ImportWallet__network-input"
              placeholder="Enter a cryptoasset name"
              value=""
            />
          </div>
        </div>
        <ul
          aria-labelledby="ImportWallet__network-label"
          class="hidden"
          id="ImportWallet__network-menu"
          role="listbox"
        />
      </div>
    </fieldset>
    <div
      class="Alert__AlertWrapper-sc-1rcd7no-0 sDOxJ flex overflow-hidden flex-col space-y-5 rounded-lg border bg-theme-secondary-100 dark:bg-theme-secondary-800 border-theme-secondary-300 dark:border-theme-secondary-800 sm:space-y-0 sm:space-x-5 sm:flex-row"
    >
      <div
        class="flex items-center justify-center text-theme-success-600"
      >
        <div
          class="sc-bdfBwQ daKoZl"
          height="1.75em"
          width="1.75em"
        >
          <svg>
            alert-success.svg
          </svg>
        </div>
      </div>
      <span
        class="pointer-events-none border rounded-md border-theme-success-600"
      />
      <div
        class="flex flex-col space-y-2"
      >
        <p
          class="leading-relaxed break-words dark:text-theme-secondary-500"
        >
          Successfully connected
        </p>
      </div>
    </div>
  </section>
</div>
`;

exports[`LedgerConnectionStep should emit event on fail 1`] = `
<div>
  <section
    class="space-y-8"
    data-testid="LedgerConnectionStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div>
        <h1
          class="mb-0 md:text-4xl"
          data-testid="header__title"
        >
          Opening of the app
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Information from your device is expected
        </div>
      </div>
    </div>
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
    >
      <label
        class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
        <div
          class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
          data-testid="FormLabel__required"
        />
      </label>
      <div>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="ImportWallet__network-menu"
          data-testid="SelectNetwork"
          role="combobox"
        >
          <label
            for="ImportWallet__network-input"
            id="ImportWallet__network-label"
          />
          <div
            class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
            data-testid="SelectNetworkInput"
          >
            <div
              class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonStartStyle-sc-1obbdqe-1 epSJiV gnQfLB px-4"
            >
              <div
                aria-label="ARK Devnet"
                class="Circle-uw7h4j-0 blBpcG border-theme-primary-100 text-theme-primary-400"
                data-testid="SelectNetworkInput__network"
              >
                <div
                  class="sc-bdfBwQ iyevwF"
                  data-testid="NetworkIcon__icon"
                  height="20"
                  width="20"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-controls="ImportWallet__network-menu"
              aria-labelledby="ImportWallet__network-label"
              autocomplete="off"
              class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures pl-15"
              data-testid="SelectNetworkInput__input"
              disabled=""
              id="ImportWallet__network-input"
              placeholder="Enter a cryptoasset name"
              value=""
            />
          </div>
        </div>
        <ul
          aria-labelledby="ImportWallet__network-label"
          class="hidden"
          id="ImportWallet__network-menu"
          role="listbox"
        />
      </div>
    </fieldset>
    <div
      class="Alert__AlertWrapper-sc-1rcd7no-0 sDOxJ flex overflow-hidden flex-col space-y-5 rounded-lg border bg-theme-secondary-100 dark:bg-theme-secondary-800 border-theme-secondary-300 dark:border-theme-secondary-800 sm:space-y-0 sm:space-x-5 sm:flex-row"
    >
      <div
        class="flex items-center justify-center text-theme-danger-400"
      >
        <div
          class="sc-bdfBwQ daKoZl"
          height="1.75em"
          width="1.75em"
        >
          <svg>
            alert-danger.svg
          </svg>
        </div>
      </div>
      <span
        class="pointer-events-none border rounded-md border-theme-danger-400"
      />
      <div
        class="flex flex-col space-y-2"
      >
        <p
          class="leading-relaxed break-words dark:text-theme-secondary-500"
        >
          Failed
        </p>
      </div>
    </div>
  </section>
</div>
`;
